Update FluentIterable to explain its relationship with Stream. ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=99760803
Former-commit-id: 0fa6eac941722326e776f000089d4065b66354ae