@@ -197,7 +197,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * {@code FluentIterable} provides a rich interface for manipulating {@code Iterable} instances in a  * chained fashion. A {@code FluentIterable} can be created from an {@code Iterable}, or from a set  * of elements. The following types of methods are provided on {@code FluentIterable}:  *<ul>  *<li>chained methods which return a new {@code FluentIterable} based in some way on the contents  * of the current one (for example {@link #transform})  *<li>conversion methods which copy the {@code FluentIterable}'s contents into a new collection or  * array (for example {@link #toList})  *<li>element extraction methods which facilitate the retrieval of certain elements (for example  * {@link #last})  *<li>query methods which answer questions about the {@code FluentIterable}'s contents (for example  * {@link #anyMatch})  *</ul>  *  *<p>Here is an example that accepts a list from a database call, filters it based on a predicate,  * transforms it by invoking {@code toString()} on each element, and returns the first 10 elements  * as an {@code ImmutableList}:<pre>   {@code  *  *   FluentIterable  *       .from(database.getClientList())  *       .filter(activeInLastMonth)  *       .transform(Functions.toStringFunction())  *       .limit(10)  *       .toList();}</pre>  *  *<p>Anything which can be done using {@code FluentIterable} could be done in a different fashion  * (often with {@link Iterables}), however the use of {@code FluentIterable} makes many sets of  * operations significantly more concise.  *  * @author Marcin Mikosik  * @since 12.0  */
+comment|/**  * An expanded {@code Iterable} API, providing functionality similar to Java 8's powerful<a href=  * "https://docs.oracle.com/javase/8/docs/api/java/util/stream/package-summary.html#package.description"  *>streams library</a> in a slightly different way.  *  *<p>The following types of methods are provided:  *  *<ul>  *<li>chaining methods which return a new {@code FluentIterable} based in some way on the contents  *     of the current one (for example {@link #transform})  *<li>element extraction methods which facilitate the retrieval of certain elements (for example  *     {@link #last})  *<li>query methods which answer questions about the {@code FluentIterable}'s contents (for example  *     {@link #anyMatch})  *<li>conversion methods which copy the {@code FluentIterable}'s contents into a new collection or  *     array (for example {@link #toList})  *</ul>  *  *<p>Several lesser-used features are currently available only as static methods on the {@link  * Iterables} class.  *  *<a name="streams"></a>  *<h3>Comparison to streams</h3>  *  *<p>Starting with Java 8, the core Java class libraries provide a new "Streams" library (in {@code  * java.util.stream}), which is similar to {@code FluentIterable} but generally more powerful. Key  * differences include:</b>  *  *<ul>  *<li>A stream is<i>single-use</i>; it becomes invalid as soon as any "terminal operation" such as  *     {@code findFirst()} or {@code iterator()} is invoked. (Even though {@code Stream} contains  *     all the right method<i>signatures</i> to implement {@link Iterable}, it does not actually  *     do so, to avoid implying repeat-iterability.) {@code FluentIterable}, on the other hand, is  *     multiple-use, and does implement {@link Iterable}.  *<li>Streams offer many features not found here, including {@code min/max}, {@code  *     distinct}, {@code reduce}, {@code sorted}, the very powerful {@code collect}, and built-in  *     support for parallelizing stream operations.  *<li>{@code FluentIterable} contains several features not available on {@code Stream}, which are  *     noted in the method descriptions below.  *<li>Streams include primitive-specialized variants such as {@code IntStream}, the use of which is  *     strongly recommended.  *<li>Streams are standard Java, not requiring a third-party dependency (but do render your code  *     incompatible with Java 7 and earlier).  *</ul>  *  *<h3>Example</h3>  *  *<p>Here is an example that accepts a list from a database call, filters it based on a predicate,  * transforms it by invoking {@code toString()} on each element, and returns the first 10 elements  * as a {@code List}:<pre>   {@code  *  *   List<String> results =  *       FluentIterable.from(database.getClientList())  *           .filter(activeInLastMonthPredicate)  *           .transform(Functions.toStringFunction())  *           .limit(10)  *           .toList();}</pre>  *  * The approximate stream equivalent is:<pre>   {@code  *  *   List<String> results =  *       database.getClientList()  *           .stream()  *           .filter(activeInLastMonthPredicate)  *           .map(Functions.toStringFunction())  *           .limit(10)  *           .collect(Collectors.toList());}</pre>  *  * @author Marcin Mikosik  * @since 12.0  */
 end_comment
 
 begin_class
@@ -266,7 +266,7 @@ name|iterable
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Returns a fluent iterable that wraps {@code iterable}, or {@code iterable} itself if it    * is already a {@code FluentIterable}.    */
+comment|/**    * Returns a fluent iterable that wraps {@code iterable}, or {@code iterable} itself if it    * is already a {@code FluentIterable}.    *    *<p><b>{@code Stream} equivalent:</b> {@code iterable.stream()} if {@code iterable} is a    * {@link Collection}; {@code StreamSupport.stream(iterable.spliterator(), false)} otherwise.    */
 annotation|@
 name|CheckReturnValue
 DECL|method|from (final Iterable<E> iterable)
@@ -364,7 +364,7 @@ name|iterable
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns a fluent iterable containing {@code elements} in the specified order.    *    * @since 18.0    */
+comment|/**    * Returns a fluent iterable containing {@code elements} in the specified order.    *    *<p><b>{@code Stream} equivalent:</b> {@code Stream.of(elements)} or {@code    * Arrays.stream(elements)}.    *    * @since 18.0    */
 annotation|@
 name|Beta
 annotation|@
@@ -398,7 +398,7 @@ argument_list|)
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns a string representation of this fluent iterable, with the format    * {@code [e1, e2, ..., en]}.    */
+comment|/**    * Returns a string representation of this fluent iterable, with the format    * {@code [e1, e2, ..., en]}.    *    *<p><b>{@code Stream} equivalent:</b> {@code stream.collect(Collectors.joining(", ", "[", "]"))}    * or (less efficiently) {@code collect(Collectors.toList()).toString()}.    */
 annotation|@
 name|Override
 annotation|@
@@ -418,7 +418,7 @@ name|iterable
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns the number of elements in this fluent iterable.    */
+comment|/**    * Returns the number of elements in this fluent iterable.    *    *<p><b>{@code Stream} equivalent:</b> {@code stream.count()}.    */
 annotation|@
 name|CheckReturnValue
 DECL|method|size ()
@@ -437,10 +437,10 @@ name|iterable
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns {@code true} if this fluent iterable contains any object for which    * {@code equals(element)} is true.    */
+comment|/**    * Returns {@code true} if this fluent iterable contains any object for which    * {@code equals(target)} is true.    *    *<p><b>{@code Stream} equivalent:</b> {@code stream.anyMatch(Predicate.isEqual(target))}    */
 annotation|@
 name|CheckReturnValue
-DECL|method|contains (@ullable Object element)
+DECL|method|contains (@ullable Object target)
 specifier|public
 specifier|final
 name|boolean
@@ -449,7 +449,7 @@ parameter_list|(
 annotation|@
 name|Nullable
 name|Object
-name|element
+name|target
 parameter_list|)
 block|{
 return|return
@@ -459,11 +459,11 @@ name|contains
 argument_list|(
 name|iterable
 argument_list|,
-name|element
+name|target
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns a fluent iterable whose {@code Iterator} cycles indefinitely over the elements of    * this fluent iterable.    *    *<p>That iterator supports {@code remove()} if {@code iterable.iterator()} does. After    * {@code remove()} is called, subsequent cycles omit the removed element, which is no longer in    * this fluent iterable. The iterator's {@code hasNext()} method returns {@code true} until    * this fluent iterable is empty.    *    *<p><b>Warning:</b> Typical uses of the resulting iterator may produce an infinite loop. You    * should use an explicit {@code break} or be certain that you will eventually remove all the    * elements.    */
+comment|/**    * Returns a fluent iterable whose {@code Iterator} cycles indefinitely over the elements of    * this fluent iterable.    *    *<p>That iterator supports {@code remove()} if {@code iterable.iterator()} does. After    * {@code remove()} is called, subsequent cycles omit the removed element, which is no longer in    * this fluent iterable. The iterator's {@code hasNext()} method returns {@code true} until    * this fluent iterable is empty.    *    *<p><b>Warning:</b> Typical uses of the resulting iterator may produce an infinite loop. You    * should use an explicit {@code break} or be certain that you will eventually remove all the    * elements.    *    *<p><b>{@code Stream} equivalent:</b> if this iterable has only a single element {@code    * element}, use {@code Stream.generate(() -> element}. Otherwise there is no simple replacement.    */
 annotation|@
 name|CheckReturnValue
 DECL|method|cycle ()
@@ -488,7 +488,7 @@ argument_list|)
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns a fluent iterable whose iterators traverse first the elements of this fluent iterable,    * followed by those of {@code other}. The iterators are not polled until necessary.    *    *<p>The returned iterable's {@code Iterator} supports {@code remove()} when the corresponding    * {@code Iterator} supports it.    *    * @since 18.0    */
+comment|/**    * Returns a fluent iterable whose iterators traverse first the elements of this fluent iterable,    * followed by those of {@code other}. The iterators are not polled until necessary.    *    *<p>The returned iterable's {@code Iterator} supports {@code remove()} when the corresponding    * {@code Iterator} supports it.    *    *<p><b>{@code Stream} equivalent:</b> {@code Stream.concat(thisStream, otherStream)}.    *    * @since 18.0    */
 annotation|@
 name|Beta
 annotation|@
@@ -525,7 +525,7 @@ argument_list|)
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns a fluent iterable whose iterators traverse first the elements of this fluent iterable,    * followed by {@code elements}.    *    * @since 18.0    */
+comment|/**    * Returns a fluent iterable whose iterators traverse first the elements of this fluent iterable,    * followed by {@code elements}.    *    *<p><b>{@code Stream} equivalent:</b> {@code Stream.concat(thisStream, Stream.of(elements))}.    *    * @since 18.0    */
 annotation|@
 name|Beta
 annotation|@
@@ -563,7 +563,7 @@ argument_list|)
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns the elements from this fluent iterable that satisfy a predicate. The    * resulting fluent iterable's iterator does not support {@code remove()}.    */
+comment|/**    * Returns the elements from this fluent iterable that satisfy a predicate. The    * resulting fluent iterable's iterator does not support {@code remove()}.    *    *<p><b>{@code Stream} equivalent:</b> {@code stream.filter(predicate)} (same).    */
 annotation|@
 name|CheckReturnValue
 DECL|method|filter (Predicate<? super E> predicate)
@@ -598,7 +598,7 @@ argument_list|)
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns {@code true} if any element in this fluent iterable satisfies the predicate.    */
+comment|/**    * Returns {@code true} if any element in this fluent iterable satisfies the predicate.    *    *<p><b>{@code Stream} equivalent:</b> {@code stream.anyMatch(predicate)} (same).    */
 annotation|@
 name|CheckReturnValue
 DECL|method|anyMatch (Predicate<? super E> predicate)
@@ -627,7 +627,7 @@ name|predicate
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns {@code true} if every element in this fluent iterable satisfies the predicate.    * If this fluent iterable is empty, {@code true} is returned.    */
+comment|/**    * Returns {@code true} if every element in this fluent iterable satisfies the predicate.    * If this fluent iterable is empty, {@code true} is returned.    *    *<p><b>{@code Stream} equivalent:</b> {@code stream.allMatch(predicate)} (same).    */
 annotation|@
 name|CheckReturnValue
 DECL|method|allMatch (Predicate<? super E> predicate)
@@ -656,7 +656,7 @@ name|predicate
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns an {@link Optional} containing the first element in this fluent iterable that    * satisfies the given predicate, if such an element exists.    *    *<p><b>Warning:</b> avoid using a {@code predicate} that matches {@code null}. If {@code null}    * is matched in this fluent iterable, a {@link NullPointerException} will be thrown.    */
+comment|/**    * Returns an {@link Optional} containing the first element in this fluent iterable that    * satisfies the given predicate, if such an element exists.    *    *<p><b>Warning:</b> avoid using a {@code predicate} that matches {@code null}. If {@code null}    * is matched in this fluent iterable, a {@link NullPointerException} will be thrown.    *    *<p><b>{@code Stream} equivalent:</b> {@code stream.filter(predicate).findFirst()}.    */
 annotation|@
 name|CheckReturnValue
 DECL|method|firstMatch (Predicate<? super E> predicate)
@@ -688,7 +688,7 @@ name|predicate
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns a fluent iterable that applies {@code function} to each element of this    * fluent iterable.    *    *<p>The returned fluent iterable's iterator supports {@code remove()} if this iterable's    * iterator does. After a successful {@code remove()} call, this fluent iterable no longer    * contains the corresponding element.    */
+comment|/**    * Returns a fluent iterable that applies {@code function} to each element of this    * fluent iterable.    *    *<p>The returned fluent iterable's iterator supports {@code remove()} if this iterable's    * iterator does. After a successful {@code remove()} call, this fluent iterable no longer    * contains the corresponding element.    *    *<p><b>{@code Stream} equivalent:</b> {@code stream.map(function)}.    */
 annotation|@
 name|CheckReturnValue
 DECL|method|transform (Function<? super E, T> function)
@@ -728,7 +728,7 @@ argument_list|)
 argument_list|)
 return|;
 block|}
-comment|/**    * Applies {@code function} to each element of this fluent iterable and returns    * a fluent iterable with the concatenated combination of results.  {@code function}    * returns an Iterable of results.    *    *<p>The returned fluent iterable's iterator supports {@code remove()} if this    * function-returned iterables' iterator does. After a successful {@code remove()} call,    * the returned fluent iterable no longer contains the corresponding element.    *    * @since 13.0 (required {@code Function<E, Iterable<T>>} until 14.0)    */
+comment|/**    * Applies {@code function} to each element of this fluent iterable and returns    * a fluent iterable with the concatenated combination of results.  {@code function}    * returns an Iterable of results.    *    *<p>The returned fluent iterable's iterator supports {@code remove()} if this    * function-returned iterables' iterator does. After a successful {@code remove()} call,    * the returned fluent iterable no longer contains the corresponding element.    *    *<p><b>{@code Stream} equivalent:</b> {@code stream.flatMap(function)} (using a function that    * produces streams, not iterables).    *    * @since 13.0 (required {@code Function<E, Iterable<T>>} until 14.0)    */
 annotation|@
 name|CheckReturnValue
 DECL|method|transformAndConcat ( Function<? super E, ? extends Iterable<? extends T>> function)
@@ -775,7 +775,7 @@ argument_list|)
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns an {@link Optional} containing the first element in this fluent iterable.    * If the iterable is empty, {@code Optional.absent()} is returned.    *    * @throws NullPointerException if the first element is null; if this is a possibility, use    *     {@code iterator().next()} or {@link Iterables#getFirst} instead.    */
+comment|/**    * Returns an {@link Optional} containing the first element in this fluent iterable.    * If the iterable is empty, {@code Optional.absent()} is returned.    *    *<p><b>{@code Stream} equivalent:</b> if the goal is to obtain any element, {@code    * stream.findAny()}; if it must specifically be the<i>first</i> element, {@code    * stream.findFirst()}.    *    * @throws NullPointerException if the first element is null; if this is a possibility, use    *     {@code iterator().next()} or {@link Iterables#getFirst} instead.    */
 annotation|@
 name|CheckReturnValue
 DECL|method|first ()
@@ -824,7 +824,7 @@ name|absent
 argument_list|()
 return|;
 block|}
-comment|/**    * Returns an {@link Optional} containing the last element in this fluent iterable.    * If the iterable is empty, {@code Optional.absent()} is returned.    *    * @throws NullPointerException if the last element is null; if this is a possibility, use    *     {@link Iterables#getLast} instead.    */
+comment|/**    * Returns an {@link Optional} containing the last element in this fluent iterable.    * If the iterable is empty, {@code Optional.absent()} is returned.    *    *<p><b>{@code Stream} equivalent:</b> {@code stream.reduce((a, b) -> b)}    *    * @throws NullPointerException if the last element is null; if this is a possibility, use    *     {@link Iterables#getLast} instead.    */
 annotation|@
 name|CheckReturnValue
 DECL|method|last ()
@@ -988,7 +988,7 @@ return|;
 block|}
 block|}
 block|}
-comment|/**    * Returns a view of this fluent iterable that skips its first {@code numberToSkip}    * elements. If this fluent iterable contains fewer than {@code numberToSkip} elements,    * the returned fluent iterable skips all of its elements.    *    *<p>Modifications to this fluent iterable before a call to {@code iterator()} are    * reflected in the returned fluent iterable. That is, the its iterator skips the first    * {@code numberToSkip} elements that exist when the iterator is created, not when {@code skip()}    * is called.    *    *<p>The returned fluent iterable's iterator supports {@code remove()} if the    * {@code Iterator} of this fluent iterable supports it. Note that it is<i>not</i>    * possible to delete the last skipped element by immediately calling {@code remove()} on the    * returned fluent iterable's iterator, as the {@code Iterator} contract states that a call    * to {@code * remove()} before a call to {@code next()} will throw an    * {@link IllegalStateException}.    */
+comment|/**    * Returns a view of this fluent iterable that skips its first {@code numberToSkip}    * elements. If this fluent iterable contains fewer than {@code numberToSkip} elements,    * the returned fluent iterable skips all of its elements.    *    *<p>Modifications to this fluent iterable before a call to {@code iterator()} are    * reflected in the returned fluent iterable. That is, the its iterator skips the first    * {@code numberToSkip} elements that exist when the iterator is created, not when {@code skip()}    * is called.    *    *<p>The returned fluent iterable's iterator supports {@code remove()} if the    * {@code Iterator} of this fluent iterable supports it. Note that it is<i>not</i>    * possible to delete the last skipped element by immediately calling {@code remove()} on the    * returned fluent iterable's iterator, as the {@code Iterator} contract states that a call    * to {@code * remove()} before a call to {@code next()} will throw an    * {@link IllegalStateException}.    *    *<p><b>{@code Stream} equivalent:</b> {@code stream.skip(numberToSkip)} (same)    */
 annotation|@
 name|CheckReturnValue
 DECL|method|skip (int numberToSkip)
@@ -1018,10 +1018,10 @@ argument_list|)
 argument_list|)
 return|;
 block|}
-comment|/**    * Creates a fluent iterable with the first {@code size} elements of this    * fluent iterable. If this fluent iterable does not contain that many elements,    * the returned fluent iterable will have the same behavior as this fluent iterable.    * The returned fluent iterable's iterator supports {@code remove()} if this    * fluent iterable's iterator does.    *    * @param size the maximum number of elements in the returned fluent iterable    * @throws IllegalArgumentException if {@code size} is negative    */
+comment|/**    * Creates a fluent iterable with the first {@code size} elements of this    * fluent iterable. If this fluent iterable does not contain that many elements,    * the returned fluent iterable will have the same behavior as this fluent iterable.    * The returned fluent iterable's iterator supports {@code remove()} if this    * fluent iterable's iterator does.    *    *<p><b>{@code Stream} equivalent:</b> {@code stream.limit(maxSize)} (same)    *    * @param maxSize the maximum number of elements in the returned fluent iterable    * @throws IllegalArgumentException if {@code size} is negative    */
 annotation|@
 name|CheckReturnValue
-DECL|method|limit (int size)
+DECL|method|limit (int maxSize)
 specifier|public
 specifier|final
 name|FluentIterable
@@ -1031,7 +1031,7 @@ argument_list|>
 name|limit
 parameter_list|(
 name|int
-name|size
+name|maxSize
 parameter_list|)
 block|{
 return|return
@@ -1043,12 +1043,12 @@ name|limit
 argument_list|(
 name|iterable
 argument_list|,
-name|size
+name|maxSize
 argument_list|)
 argument_list|)
 return|;
 block|}
-comment|/**    * Determines whether this fluent iterable is empty.    */
+comment|/**    * Determines whether this fluent iterable is empty.    *    *<p><b>{@code Stream} equivalent:</b> {@code !stream.findAny().isPresent()}    */
 annotation|@
 name|CheckReturnValue
 DECL|method|isEmpty ()
@@ -1069,7 +1069,7 @@ name|hasNext
 argument_list|()
 return|;
 block|}
-comment|/**    * Returns an {@code ImmutableList} containing all of the elements from this fluent iterable in    * proper sequence.    *    * @since 14.0 (since 12.0 as {@code toImmutableList()}).    */
+comment|/**    * Returns an {@code ImmutableList} containing all of the elements from this fluent iterable in    * proper sequence.    *    *<p><b>{@code Stream} equivalent:</b> {@code ImmutableList.copyOf(stream.iterator())}    *    * @since 14.0 (since 12.0 as {@code toImmutableList()}).    */
 annotation|@
 name|CheckReturnValue
 DECL|method|toList ()
@@ -1091,7 +1091,7 @@ name|iterable
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns an {@code ImmutableList} containing all of the elements from this {@code    * FluentIterable} in the order specified by {@code comparator}.  To produce an {@code    * ImmutableList} sorted by its natural ordering, use {@code toSortedList(Ordering.natural())}.    *    * @param comparator the function by which to sort list elements    * @throws NullPointerException if any element is null    * @since 14.0 (since 13.0 as {@code toSortedImmutableList()}).    */
+comment|/**    * Returns an {@code ImmutableList} containing all of the elements from this {@code    * FluentIterable} in the order specified by {@code comparator}.  To produce an {@code    * ImmutableList} sorted by its natural ordering, use {@code toSortedList(Ordering.natural())}.    *    *<p><b>{@code Stream} equivalent:</b>    * {@code ImmutableList.copyOf(stream.sorted(comparator).iterator())}    *    * @param comparator the function by which to sort list elements    * @throws NullPointerException if any element is null    * @since 14.0 (since 13.0 as {@code toSortedImmutableList()}).    */
 annotation|@
 name|CheckReturnValue
 DECL|method|toSortedList (Comparator<? super E> comparator)
@@ -1126,7 +1126,7 @@ name|iterable
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns an {@code ImmutableSet} containing all of the elements from this fluent iterable with    * duplicates removed.    *    * @since 14.0 (since 12.0 as {@code toImmutableSet()}).    */
+comment|/**    * Returns an {@code ImmutableSet} containing all of the elements from this fluent iterable with    * duplicates removed.    *    *<p><b>{@code Stream} equivalent:</b> {@code ImmutableSet.copyOf(stream.iterator())}    *    * @since 14.0 (since 12.0 as {@code toImmutableSet()}).    */
 annotation|@
 name|CheckReturnValue
 DECL|method|toSet ()
@@ -1148,7 +1148,7 @@ name|iterable
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns an {@code ImmutableSortedSet} containing all of the elements from this {@code    * FluentIterable} in the order specified by {@code comparator}, with duplicates (determined by    * {@code comparator.compare(x, y) == 0}) removed. To produce an {@code ImmutableSortedSet} sorted    * by its natural ordering, use {@code toSortedSet(Ordering.natural())}.    *    * @param comparator the function by which to sort set elements    * @throws NullPointerException if any element is null    * @since 14.0 (since 12.0 as {@code toImmutableSortedSet()}).    */
+comment|/**    * Returns an {@code ImmutableSortedSet} containing all of the elements from this {@code    * FluentIterable} in the order specified by {@code comparator}, with duplicates (determined by    * {@code comparator.compare(x, y) == 0}) removed. To produce an {@code ImmutableSortedSet} sorted    * by its natural ordering, use {@code toSortedSet(Ordering.natural())}.    *    *<p><b>{@code Stream} equivalent:</b>    * {@code ImmutableSortedSet.copyOf(comparator, stream.iterator())}    *    * @param comparator the function by which to sort set elements    * @throws NullPointerException if any element is null    * @since 14.0 (since 12.0 as {@code toImmutableSortedSet()}).    */
 annotation|@
 name|CheckReturnValue
 DECL|method|toSortedSet (Comparator<? super E> comparator)
@@ -1180,7 +1180,7 @@ name|iterable
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns an {@code ImmutableMultiset} containing all of the elements from this fluent iterable.    *    * @since 19.0    */
+comment|/**    * Returns an {@code ImmutableMultiset} containing all of the elements from this fluent iterable.    *    *<p><b>{@code Stream} equivalent:</b> {@code ImmutableMultiset.copyOf(stream.iterator())}    *    * @since 19.0    */
 annotation|@
 name|CheckReturnValue
 DECL|method|toMultiset ()
@@ -1202,7 +1202,7 @@ name|iterable
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns an immutable map whose keys are the distinct elements of this {@code FluentIterable}    * and whose value for each key was computed by {@code valueFunction}. The map's iteration order    * is the order of the first appearance of each key in this iterable.    *    *<p>When there are multiple instances of a key in this iterable, it is unspecified whether    * {@code valueFunction} will be applied to more than one instance of that key and, if it is,    * which result will be mapped to that key in the returned map.    *    * @throws NullPointerException if any element of this iterable is {@code null}, or if {@code    *     valueFunction} produces {@code null} for any key    * @since 14.0    */
+comment|/**    * Returns an immutable map whose keys are the distinct elements of this {@code FluentIterable}    * and whose value for each key was computed by {@code valueFunction}. The map's iteration order    * is the order of the first appearance of each key in this iterable.    *    *<p>When there are multiple instances of a key in this iterable, it is unspecified whether    * {@code valueFunction} will be applied to more than one instance of that key and, if it is,    * which result will be mapped to that key in the returned map.    *    *<p><b>{@code Stream} equivalent:</b> TODO (note that Collectors.toMap would trash the order...)    *    * @throws NullPointerException if any element of this iterable is {@code null}, or if {@code    *     valueFunction} produces {@code null} for any key    * @since 14.0    */
 annotation|@
 name|CheckReturnValue
 DECL|method|toMap (Function<? super E, V> valueFunction)
@@ -1280,7 +1280,7 @@ name|keyFunction
 argument_list|)
 return|;
 block|}
-comment|/**    * Returns a map with the contents of this {@code FluentIterable} as its {@code values}, indexed    * by keys derived from those values. In other words, each input value produces an entry in the    * map whose key is the result of applying {@code keyFunction} to that value. These entries appear    * in the same order as they appeared in this fluent iterable. Example usage:    *<pre>   {@code    *    *   Color red = new Color("red", 255, 0, 0);    *   ...    *   FluentIterable<Color> allColors = FluentIterable.from(ImmutableSet.of(red, green, blue));    *    *   Map<String, Color> colorForName = allColors.uniqueIndex(toStringFunction());    *   assertThat(colorForName).containsEntry("red", red);}</pre>    *    *<p>If your index may associate multiple values with each key, use {@link #index(Function)    * index}.    *    * @param keyFunction the function used to produce the key for each value    * @return a map mapping the result of evaluating the function {@code    *     keyFunction} on each value in this fluent iterable to that value    * @throws IllegalArgumentException if {@code keyFunction} produces the same    *     key for more than one value in this fluent iterable    * @throws NullPointerException if any elements of this fluent iterable is null, or    *     if {@code keyFunction} produces {@code null} for any value    * @since 14.0    */
+comment|/**    * Returns a map with the contents of this {@code FluentIterable} as its {@code values}, indexed    * by keys derived from those values. In other words, each input value produces an entry in the    * map whose key is the result of applying {@code keyFunction} to that value. These entries appear    * in the same order as they appeared in this fluent iterable. Example usage:    *<pre>   {@code    *    *   Color red = new Color("red", 255, 0, 0);    *   ...    *   FluentIterable<Color> allColors = FluentIterable.from(ImmutableSet.of(red, green, blue));    *    *   Map<String, Color> colorForName = allColors.uniqueIndex(toStringFunction());    *   assertThat(colorForName).containsEntry("red", red);}</pre>    *    *<p>If your index may associate multiple values with each key, use {@link #index(Function)    * index}.    *    *<p><b>{@code Stream} equivalent:</b> TODO    *    * @param keyFunction the function used to produce the key for each value    * @return a map mapping the result of evaluating the function {@code    *     keyFunction} on each value in this fluent iterable to that value    * @throws IllegalArgumentException if {@code keyFunction} produces the same    *     key for more than one value in this fluent iterable    * @throws NullPointerException if any elements of this fluent iterable is null, or    *     if {@code keyFunction} produces {@code null} for any value    * @since 14.0    */
 annotation|@
 name|CheckReturnValue
 DECL|method|uniqueIndex (Function<? super E, K> keyFunction)
